Update Settings Page

--- a/settings.html
+++ b/settings.html
@@ -54,55 +54,61 @@
                   >
                   <div class="w-full pb-5">
                      <h1 class="font-semibold text-[#0A0D14] text-lg">
-                        Main Settings
+                        User Profile
                      </h1>
                      <h2 class="font-normal text-[#525866] text-base">
-                        Application name and tags
+                        Make sure all information has been addeds
                      </h2>
                   </div>
                   <div class="border-b-2 border-b-[#E5E7EB] w-full mb-5">
                      <div class="grid grid-cols-1 lg:grid-cols-2 gap-0 lg:gap-5 w-full">
                         <div class="mb-5 w-full">
-                           <label for="email" class="block mb-2 text-sm font-medium text-[#161924]">Business Name</label>
-                           <input type="text" class="bg-[#FFFFFF] border border-[#E2E4E9] text-[#161924] text-base font-normal rounded-lg block w-full py-2 px-3 " placeholder="PHP Travels" required />
+                           <label for="text" class="block mb-2 text-sm font-medium text-[#161924]">First Name</label>
+                           <input type="text" class="bg-[#FFFFFF] border border-[#E2E4E9] text-[#161924] text-base font-normal rounded-lg block w-full py-2 px-3 " placeholder="Jhon" required />
                         </div>
                         <div class="mb-5 w-full">
-                           <label for="email" class="block mb-2 text-sm font-medium text-[#161924]">Business Name</label>
-                           <input type="text" class="bg-[#FFFFFF] border border-[#E2E4E9] text-[#161924] text-base font-normal rounded-lg block w-full py-2 px-3 " placeholder="PHP Travels" required />
+                           <label for="text" class="block mb-2 text-sm font-medium text-[#161924]">Last Name</label>
+                           <input type="text" class="bg-[#FFFFFF] border border-[#E2E4E9] text-[#161924] text-base font-normal rounded-lg block w-full py-2 px-3 " placeholder="Doe" required />
                         </div>
                      </div>
                      <div class="grid grid-cols-1 lg:grid-cols-2 gap-0 lg:gap-5 w-full">
                         <div class="mb-5 w-full">
-                           <label for="email" class="block mb-2 text-sm font-medium text-[#161924]">Business Name</label>
-                           <input type="text" class="bg-[#FFFFFF] border border-[#E2E4E9] text-[#161924] text-base font-normal rounded-lg block w-full py-2 px-3 " placeholder="PHP Travels" required />
+                           <label for="email" class="block mb-2 text-sm font-medium text-[#161924]">Email</label>
+                           <input type="email" class="bg-[#FFFFFF] border border-[#E2E4E9] text-[#161924] text-base font-normal rounded-lg block w-full py-2 px-3 " placeholder="Enter Here" required />
                         </div>
                         <div class="mb-5 w-full">
-                           <label for="email" class="block mb-2 text-sm font-medium text-[#161924]">Offline Message</label>
-                           <input type="text" class="bg-[#FFFFFF] border border-[#E2E4E9] text-[#161924] text-base font-normal rounded-lg block w-full py-2 px-3 " placeholder="PHP Travels" required />
+                           <label for="phone" class="block mb-2 text-sm font-medium text-[#161924]">Phone</label>
+                           <input type="phone" class="bg-[#FFFFFF] border border-[#E2E4E9] text-[#161924] text-base font-normal rounded-lg block w-full py-2 px-3 " placeholder="(+880)-1700-000000" required />
                         </div>
                      </div>
-                     <div class="mb-5 w-full">
-                        <label for="email" class="block mb-2 text-sm font-medium text-[#161924]">Offline Message</label>
-                        <textarea class="bg-[#FFFFFF] border border-[#E2E4E9] text-[#161924] text-base font-normal rounded-lg block w-full py-2 px-3 " placeholder="PHP Travels" required></textarea>
-                     </div>
-                  </div>
-                  <div class="w-full pb-5 my-3">
-                     <h1 class="font-semibold text-[#0A0D14] text-lg">
-                        Website Theme
-                     </h1>
-                     <h2 class="font-normal text-[#525866] text-base">
-                        Set Color Theme
-                     </h2>
-                  </div>
-                  <div class="border-b-2 border-b-[#E5E7EB] w-full mb-5">
                      <div class="grid grid-cols-1 lg:grid-cols-2 gap-0 lg:gap-5 w-full">
                         <div class="mb-5 w-full">
-                           <label for="email" class="block mb-2 text-sm font-medium text-[#161924]">Business Name</label>
-                           <input type="text" class="bg-[#FFFFFF] border border-[#E2E4E9] text-[#161924] text-base font-normal rounded-lg block w-full py-2 px-3 " placeholder="PHP Travels" required />
+                           <label for="password" class="block mb-2 text-sm font-medium text-[#161924]">Password</label>
+                           <input type="password" class="bg-[#FFFFFF] border border-[#E2E4E9] text-[#161924] text-base font-normal rounded-lg block w-full py-2 px-3 " placeholder="************" required />
                         </div>
                         <div class="mb-5 w-full">
-                           <label for="email" class="block mb-2 text-sm font-medium text-[#161924]">Business Name</label>
-                           <input type="text" class="bg-[#FFFFFF] border border-[#E2E4E9] text-[#161924] text-base font-normal rounded-lg block w-full py-2 px-3 " placeholder="PHP Travels" required />
+                           <label for="text" class="block mb-2 text-sm font-medium text-[#161924]">Company</label>
+                           <input type="text" class="bg-[#FFFFFF] border border-[#E2E4E9] text-[#161924] text-base font-normal rounded-lg block w-full py-2 px-3 " placeholder="Enter Here" required />
+                        </div>
+                     </div>
+                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-0 lg:gap-5 w-full">
+                        <div class="mb-5 w-full">
+                           <label for="text" class="block mb-2 text-sm font-medium text-[#161924]">City</label>
+                           <input type="text" class="bg-[#FFFFFF] border border-[#E2E4E9] text-[#161924] text-base font-normal rounded-lg block w-full py-2 px-3 " placeholder="Enter Here" required />
+                        </div>
+                        <div class="mb-5 w-full">
+                           <label for="text" class="block mb-2 text-sm font-medium text-[#161924]">Postal Code</label>
+                           <input type="text" class="bg-[#FFFFFF] border border-[#E2E4E9] text-[#161924] text-base font-normal rounded-lg block w-full py-2 px-3 " placeholder="Enter Here" required />
+                        </div>
+                     </div>
+                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-0 lg:gap-5 w-full">
+                        <div class="mb-5 w-full">
+                           <label for="text" class="block mb-2 text-sm font-medium text-[#161924]">Address 1</label>
+                           <input type="text" class="bg-[#FFFFFF] border border-[#E2E4E9] text-[#161924] text-base font-normal rounded-lg block w-full py-2 px-3 " placeholder="Enter Here" required />
+                        </div>
+                        <div class="mb-5 w-full">
+                           <label for="text" class="block mb-2 text-sm font-medium text-[#161924]">Address 2</label>
+                           <input type="text" class="bg-[#FFFFFF] border border-[#E2E4E9] text-[#161924] text-base font-normal rounded-lg block w-full py-2 px-3 " placeholder="Enter Here" required />
                         </div>
                      </div>
                   </div>
@@ -119,64 +125,27 @@
                   >
                   <div class="w-full pb-3">
                      <h1 class="font-semibold text-[#161924] text-lg">
-                        Branding
+                        Payment Details
                      </h1>
                      <h2 class="font-normal text-[#525866] text-base">
-                        Business Logo and Favicon
+                        Select Payment Methods
                      </h2>
                   </div>
                   <div class="border border-[#E5E7EB] bg-[#FFFFFF] rounded-lg p-3 w-full h-fit">
-                     <div class="w-full pb-3">
-                        <h1 class="font-semibold text-[#161924] text-sm">
-                           Business Logo
-                        </h1>
-                        <h2 class="font-normal text-[#525866] text-xs">
-                           only .png, .jpg, .jpeg files are allowed Max size 2MB
-                        </h2>
-                     </div>
-                     <div class="w-full1 flex items-center justify-center">
-                        <img width="100px" height="100px" src="https://img.freepik.com/premium-vector/modern-professional-travel-logo_373791-1203.jpg?semt=ais_hybrid&w=740" alt="">
-                     </div>
-                     <div
-                        class="flex items-center justify-start gap-5 mb-2 mt-4 w-full"
-                        >
-                        <button
-                           class="bg-[#FFFFFF] border border-[#E2E4E9] w-full px-3 py-2 text-[#E52F2F] rounded-lg cursor-pointer font-semibold text-base"
-                           >
-                        Remove
-                        </button>
-                        <button
-                           class="bg-[#FFFFFF] border border-[#E2E4E9] w-full px-3 py-2 text-[#161924] rounded-lg cursor-pointer font-semibold text-base"
-                           >
-                        Choose File
-                        </button>
-                     </div>
-                  </div>
-                  <div class="border border-[#E5E7EB] bg-[#FFFFFF] rounded-lg p-3 w-full h-fit">
-                     <div class="w-full pb-3">
-                        <h1 class="font-semibold text-[#161924] text-sm">
-                           Favicon
-                        </h1>
-                        <h2 class="font-normal text-[#525866] text-xs">
-                           only .png, .jpg, .jpeg files are allowed Max size 2MB
-                        </h2>
-                     </div>
-                     <div class="w-full1 flex items-center justify-center">
-                        <img width="100px" height="100px" src="https://img.freepik.com/premium-vector/modern-professional-travel-logo_373791-1203.jpg?semt=ais_hybrid&w=740" alt="">
-                     </div>
-                     <div
-                        class="flex items-center justify-start gap-5 mb-2 mt-4 w-full"
-                        >
-                        <button
-                           class="bg-[#FFFFFF] border border-[#E2E4E9] w-full px-3 py-2 text-[#E52F2F] rounded-lg cursor-pointer font-semibold text-base"
-                           >
-                        Remove
-                        </button>
-                        <button
-                           class="bg-[#FFFFFF] border border-[#E2E4E9] w-full px-3 py-2 text-[#161924] rounded-lg cursor-pointer font-semibold text-base"
-                           >
-                        Choose File
-                        </button>
+                     <div class="flex flex-col gap-0 lg:gap-5 w-full">
+                        <div class="mb-5 w-full">
+                           <label for="text" class="block mb-2 text-sm font-medium text-[#161924]">Choose Payment Method</label>
+                           <select class="bg-[#FFFFFF] border border-[#E2E4E9] text-[#161924] text-base font-normal rounded-lg block w-full py-2 px-3 " name="cars" id="cars">
+                              <option value="PayPal">PayPal</option>
+                              <option value="Wise">Wise</option>
+                              <option value="Crypto">Crypto</option>
+                              <option value="Skrill">Skrill</option>
+                            </select>
+                        </div>
+                        <div class="mb-5 w-full">
+                           <label for="text" class="block mb-2 text-sm font-medium text-[#161924]">Paypal Email</label>
+                           <input type="email" class="bg-[#FFFFFF] border border-[#E2E4E9] text-[#161924] text-base font-normal rounded-lg block w-full py-2 px-3 " placeholder="Enter Here" required />
+                        </div>
                      </div>
                   </div>
                </div>
