--- a/drawer.html
+++ b/drawer.html
@@ -31,7 +31,7 @@
                    <h2 class="uppercase font-medium text-xs text-[#868C98] tracking-wider p-1">
                       Main
                    </h2>
-                   <a class="hover:cursor-pointer p-2 hover:bg-[#6E3FF31A] hover:rounded-lg flex items-center gap-3">
+                   <a class="hover:cursor-pointer p-2 hover:bg-[#6E3FF31A] hover:rounded-lg flex items-center gap-3" href="index.html">
                       <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                          <path
                             d="M7.5 2.5H3.33333C2.8731 2.5 2.5 2.8731 2.5 3.33333V9.16667C2.5 9.6269 2.8731 10 3.33333 10H7.5C7.96024 10 8.33333 9.6269 8.33333 9.16667V3.33333C8.33333 2.8731 7.96024 2.5 7.5 2.5Z"
@@ -48,7 +48,7 @@
                       </svg>
                       <p class="text-[#313131] font-medium text-sm">Dashboard</p>
                    </a>
-                   <a class="hover:cursor-pointer p-2 hover:bg-[#6E3FF31A] hover:rounded-lg flex items-center gap-3">
+                   <a class="hover:cursor-pointer p-2 hover:bg-[#6E3FF31A] hover:rounded-lg flex items-center gap-3" href="allbookings.html">
                       <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                          <path
                             d="M10 18.3333V9.99996M10 9.99996L2.74167 5.83329M10 9.99996L17.2583 5.83329M6.25 3.55829L13.75 7.84996M9.16667 18.1083C9.42003 18.2546 9.70744 18.3316 10 18.3316C10.2926 18.3316 10.58 18.2546 10.8333 18.1083L16.6667 14.775C16.9198 14.6288 17.13 14.4187 17.2763 14.1657C17.4225 13.9126 17.4997 13.6256 17.5 13.3333V6.66663C17.4997 6.37435 17.4225 6.0873 17.2763 5.83426C17.13 5.58122 16.9198 5.37109 16.6667 5.22496L10.8333 1.89163C10.58 1.74535 10.2926 1.66833 10 1.66833C9.70744 1.66833 9.42003 1.74535 9.16667 1.89163L3.33333 5.22496C3.08022 5.37109 2.86998 5.58122 2.72372 5.83426C2.57745 6.0873 2.5003 6.37435 2.5 6.66663V13.3333C2.5003 13.6256 2.57745 13.9126 2.72372 14.1657C2.86998 14.4187 3.08022 14.6288 3.33333 14.775L9.16667 18.1083Z"
@@ -56,7 +56,7 @@
                       </svg>
                       <p class="text-[#313131] font-medium text-sm">Deals</p>
                    </a>
-                   <a class="hover:cursor-pointer p-2 hover:bg-[#6E3FF31A] hover:rounded-lg flex items-center gap-3">
+                   <a class="hover:cursor-pointer p-2 hover:bg-[#6E3FF31A] hover:rounded-lg flex items-center gap-3" href="settings.html">
                       <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                          <path
                             d="M17.5 8.88V15.8333C17.5 16.2754 17.3244 16.6993 17.0118 17.0118C16.6993 17.3244 16.2754 17.5 15.8333 17.5H4.16667C3.72464 17.5 3.30072 17.3244 2.98816 17.0118C2.67559 16.6993 2.5 16.2754 2.5 15.8333V4.16667C2.5 3.72464 2.67559 3.30072 2.98816 2.98816C3.30072 2.67559 3.72464 2.5 4.16667 2.5H14.4533M7.5 9.16667L10 11.6667L18.3333 3.33333"
